--- a/cat-site/schw/introduction.html
+++ b/cat-site/schw/introduction.html
@@ -56,7 +56,7 @@
 
       <p>Since the royal collection was destroyed in 1794, one is forced to look for information on
         the musical repertoire and for information on Scheibe’s works in eighteenth-century sources
-        such as library catalogues, auction catalogues, sales catalogues, newspapers advertisements
+        such as library catalogues, auction catalogues, sales catalogues, newspaper advertisements
         (concerts, sales, announcements), academic journals, court archives regarding orders and
         payments, diaries and biographies. The first point of departure is, of course, his
         autobiography, which he wrote for Mattheson’s <em>Grundlage einer Ehren-Pforte
@@ -71,7 +71,7 @@
         composed around 1,200 musical works in all.</p>
 
       <p>During Scheibe’s early years in Copenhagen (1740–48), newspapers were few, and very often
-        they contained merely brief information concerning new court employees or descriptions of
+        they contained only brief information concerning new court employees or descriptions of
         major events. Gradually advertisements appeared in the papers or journals, announcing
         concerts performed in the local musical societies and sometimes including the name of the
         composer. During the 1750s, the reports of major official events and court celebrations
@@ -175,7 +175,7 @@
       <p>There is no doubt that Scheibe had a very sharp pen indeed. This is evident in his
         satirical writings such as the <em>Misogynis </em>(the misogynist or women hater), which was
         so popular that it received three editions, and his political pamphlet <em>Anekdoten eines
-          Reisenden Russen</em>,criticising the Danish state and national character. However, he
+          Reisenden Russen</em>, criticising the Danish state and national character. However, he
         also wrote the first biography of his friend Ludvig Holberg (1684–1754), professor at the
         university and a famous playwright. The biography not only provides information on Holberg
         but also indirectly on Scheibe.</p>
