--- a/cat-site/schw/introduction.html
+++ b/cat-site/schw/introduction.html
@@ -44,7 +44,7 @@
         Scheibe passed away in 1776 many of his private manuscripts were sold, some of them ending
         up in The Royal Library shortly afterwards; the majority, however, were most likely bought
         by private connoisseurs whenever a sale was advertised in the newspapers. Even the later
-        Kapellmeister Claus Nielsen Schall (1757–1835) and C.F.E. Weyse (1774–1842) who was court
+        Kapellmeister Claus Nielsen Schall (1757–1835) and C.E.F. Weyse (1774–1842) who was court
         composer obtained works in manuscript. Weyse sold some of them on to the music collector,
         Georg Poelchau (1773–1836) in Berlin, while keeping others for himself. By the end of the
         eighteenth century, Scheibe’s music was not popular anymore and he acquired a rather
