--- a/cat-site/cnw/preface.html
+++ b/cat-site/cnw/preface.html
@@ -16,7 +16,7 @@
           Møllerhøj<span 
                       class="expan">Birgit Bjørnum and Klaus Møllerhøj, <i>Carl Nielsens
               Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek</i>. Copenhagen 1992</span></a>  
-        description of Nielsen&apos;s manuscripts in The Royal Library (1992) is
+        description of Nielsen&apos;s manuscripts in The Royal Danish Library (1992) is
         one of the most important groundworks. 
         Strictly speaking, however, none of these are catalogues of <i>works</i>. Their numberings are mainly 
         related to bibliographical items – prints (FS) and manuscripts (CNS), respectively. 
@@ -36,17 +36,21 @@
         or had their attention drawn to errors. However, due to limited resources the editors 
         have not been able to verify all information systematically. 
         Original sources have only been consulted in cases of doubt. </p>
-      <p>The Danish Centre for Music
-        Publication which is responsible for the publication of CNW was established at The
-        Royal Library shortly after the completion of the Carl Nielsen Edition in order to 
+      <p>The Danish Centre for Music Editing which is responsible for the publication of CNW was established at The
+        Royal Danish Library shortly after the completion of the Carl Nielsen Edition in order to 
         maintain and carry on the music philological
         expertise and not least exploit the detailed knowledge of Nielsen&apos;s works that
         had been gathered during the working on the complete edition. 
       </p>
       <p>Biographical as well as bibliographic information has also been drawn from a number of other
-        sources, among others the <a class="abbr" 
-				     href="javascript:void(0);"><i>Carl Nielsen Letters</i><span class="expan">John Fellow (ed.), <i>Carl
-              Nielsen Brevudgaven</i>. Copenhagen 2005–2015</span></a>, the publication
+        sources, among others <a class="abbr" href="javascript:void(0);">Nielsen's letters<span class="expan">John Fellow (ed.), <i>Carl
+          Nielsen Brevudgaven</i>. Copenhagen 2005–2015.<br/>
+          A selection in English translation is published in:<br/>
+          David Fanning and Michelle Assay (eds.), <i>Carl Nielsen. Selected Letters and Diaries</i>. Copenhagen 2017</span>
+        </a>, the publication
+        of <a class="abbr" href="javascript:void(0);">Nielsen's essays<span class="expan">John Fellow (ed.), <i>Carl
+          Nielsen til sin samtid</i>. Copenhagen 1999</span>
+        </a>, the publication
         of <a class="abbr" href="javascript:void(0);">Nielsen&apos;s essays<span class="expan">John Fellow (ed.), <i>Carl
               Nielsen til sin samtid</i>. Copenhagen 1999</span></a>, and the current bibliography
         available in the journal, <a href="https://tidsskrift.dk/index.php/carlnielsenstudies" 
@@ -58,7 +62,7 @@
         thanks to Carl Nielsen og Anne Marie Carl-Nielsens Legat (the Carl Nielsen 
         and Anne Marie Carl-Nielsen&apos;s Foundation) for
         financial support of the project. Thanks are also due to Knud Ketting
-        who most kindly has provided us with information on the first known
+        who most kindly has provided us with information on known
         performances of the musical works.</p>
       <p>The Danish Centre for Music Publication collaborates with <i><a href="http://carlnielsen.org" 
 									 title="Carl Nielsen 2015">Carl Nielsen 2015</a></i>.</p>
