--- a/cat-site/nwgw/about.html
+++ b/cat-site/nwgw/about.html
@@ -18,13 +18,12 @@
             P.O. Box 2149<br/>
             DK-1016 Copenhagen K<br/>
             Denmark<br/>
-            WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
-            E-mail: <a href="mailto://dcm-dl-alle@kb.dk">dcm-dl-alle@kb.dk</a></span></p> 
+            WWW: <a href="http://www.kb.dk">www.kb.dk</a><br/>
         <p><span class="label">&#160;</span><span>&#169; 2017</span></p>
         <p><span class="label">Technical development:</span><span>Axel Teich Geertinger, Sigfrid Lundberg</span></p>
         <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
 							    title="See MerMEId project page">MerMEId</a></span></p>
-        <p><span class="label">Sponsors: </span><span></span></p>
+        <p><span class="label">Sponsors: </span><span>Augustinus Fonden, Beckett-Fonden, Oticon Fonden</span></p>
         <p>&#160;</p>
       </div>
     </div>
