add n and l parameters to document.xq; make index.xq main page

--- a/cat-site/cnw/appendix.html
+++ b/cat-site/cnw/appendix.html
@@ -23,7 +23,7 @@
                     <p><i>Judith</i>. Fragments, including sketches titled <i>Kor og Dans til
                             Judith</i>, <i>Judith vender tilbage</i> and <i>Judiths Dans</i>. Only
                             <i>Hyrdedrengens Melodi</i> <a class="work_number_reference"
-                            href="http://www.kb.dk/dcm/cnw/document.xq?doc=4cb50e5e-ff57-4486-b24c-ba5a236fe735.xml"
+                                href="document.xq?n=416"
                             >CNW 416</a> is completed. (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
 København</span></a>
 <a class="abbr" href="javascript:void(0);">CNS<span class="expan">Birgit Bjørnum &amp; Klaus Møllerhøj: <i>Carl Nielsens Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek / The Carl Nielsen Collection. A Catalogue of the Composer's Musical Manuscripts in the Royal Library</i>. The Royal Library: Copenhagen 1992. </span></a> 357a [in <a class="abbr" href="javascript:void(0);">CNS<span class="expan">Birgit Bjørnum &amp; Klaus Møllerhøj: <i>Carl Nielsens Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek / The Carl Nielsen Collection. A Catalogue of the Composer's Musical Manuscripts in the Royal Library</i>. The Royal Library: Copenhagen 1992. </span></a> 358a])</p>
