--- a/cat-site/cnw/introduction.html
+++ b/cat-site/cnw/introduction.html
@@ -181,22 +181,22 @@
 				but are included under the same CNW number, also when it comes to songs. This
 				overall understanding of &apos;work&apos; implies therefore that there is not a
 				one-to-one agreement between a work in CNW and an edition in <a
-					href="http://www.kb.dk/en/nb/dcm/cnu/" target="_blank"
+					href="https://www.kb.dk/en/find-materials/collections/sheet-music-collection/music-editions-and-lists-works-royal-danish-library" target="_blank"
 					title="The Carl Nielsen Edition">The Carl Nielsen Edition (CNU)</a> in all
 				instances; CNU may have several editions under the same CNW number. This applies to
 					<i>Hjemvee</i>
-				<a class="work_number_reference" href="document.xq?doc=cnw0205.xml">CNW 205</a>, for
+				<a class="work_number_reference" href="document.xq?n=205">CNW 205</a>, for
 				instance (better known with the first line &apos;Underlige Aftenlufte&apos;), which
 				is published in CNU in four distinct arrangements of the same melody, all listed
 				under the same entry in CNW. Nielsen&apos;s original and lesser known melody to the
 				same text has, on the other hand, its own entry (<a class="work_number_reference"
-					href="document.xq?doc=cnw0296.xml" title="View work details">CNW 296</a>).</p>
+					href="document.xq?n=296" title="View work details">CNW 296</a>).</p>
 			<p>Also songs employing the same melody but with a different text are regarded as
 				distinct compositions: for instance <i>Julesang</i> (1923) <a
 					class="work_number_reference" title="View work details"
-					href="document.xq?doc=cnw0313.xml">CNW 313</a>, which Nielsen re-used with
+					href="document.xq?n=313">CNW 313</a>, which Nielsen re-used with
 				another text in 1924 (&apos;Danevang med grønne bred&apos;) <a
-					class="work_number_reference" href="document.xq?doc=cnw0318.xml"
+					class="work_number_reference" href="document.xq?n=318"
 					title="View work details">CNW 318</a>. </p>
 			<div class="toplink noprint"><a href="#top">To top of page</a></div>
 			
@@ -333,10 +333,10 @@
 				reveal changes in Nielsen&apos;s spelling and punctuation habits throughout his life
 				and are apparent in titles such as <i>Har Haand du lagt paa Herrens Plov</i>
 				<a class="work_number_reference" title="View work details"
-					href="document.xq?doc=cnw0173.xml">CNW 173</a> and <i>Jeg gik i marken og
+					href="document.xq?n=173">CNW 173</a> and <i>Jeg gik i marken og
 					vogtede får</i>
 				<a class="work_number_reference" title="View work details"
-					href="document.xq?doc=cnw0327.xml">CNW 327</a>. From an orthographical point of
+					href="document.xq?n=327">CNW 327</a>. From an orthographical point of
 				view, the titles in general expose a heterogeneous and a seemingly inconsistent
 				practice which, however, has been retained rather than modernized, partly because
 				modernized spelling would be just as dated (though to a later time) and partly
@@ -356,17 +356,17 @@
 				– been standardized and modernized such as <i>Kvartet for to violiner, bratsch og
 					cello</i> (Quartet for Two Violins, Viola and Cello) <a
 					class="work_number_reference" title="View work details"
-					href="document.xq?doc=cnw0049.xml">CNW 49</a>. Incidental music has been given
+					href="document.xq?n=49">CNW 49</a>. Incidental music has been given
 				titles such as <i>Musik til Ludvig Holsteins skuespil "Tove"</i> (Music for Ludvig
 				Holstein&apos;s Play &apos;Tove&apos;) <a class="work_number_reference"
-					title="View work details" href="document.xq?doc=cnw0010.xml">CNW 10</a>, because
+					title="View work details" href="document.xq?n=10">CNW 10</a>, because
 				the title <i>Tove</i> would refer to the play as a whole.</p>
 			<p>Many of the songs were never provided with an actual title by Nielsen; in these cases
 				the first line of the text has been added as title. In the remaining instances the
 				text incipit is given as the alternative title, also when the song is better known
 				by its first line (e.g. <i>Hjemvee</i>
 				<a class="work_number_reference" title="View work details"
-					href="document.xq?doc=cnw205.xml">CNW 205</a>, better known as &apos;Underlige
+					href="document.xq?n=205">CNW 205</a>, better known as &apos;Underlige
 				Aftenlufte&apos;).</p>
 			<div class="toplink noprint"><a href="#top">To top of page</a></div>
 			
@@ -431,7 +431,7 @@
 				incipits including the first bars of the composition&apos;s main parts (movements,
 				scenes or similar). Works of a more extensive instrumentation are provided with
 				incipits in short score. By clicking on an incipit, a larger image appears in a
-				separate window. Incipits are based on <a href="http://www.kb.dk/en/nb/dcm/cnu/"
+				separate window. Incipits are based on <a href="https://www.kb.dk/en/find-materials/collections/sheet-music-collection/music-editions-and-lists-works-royal-danish-library"
 					target="_blank" title="The Carl Nielsen Edition">CNU</a> and therefore do not
 				necessarily reproduce the exact reading of one particular source.</p>
 			<p>It should be noted that the music in some of the sources might be notated in a
@@ -445,7 +445,7 @@
 				interpretations such as first and second subjects. Technical indications such as
 				fingerings and bowings are omitted unless the work has a distinctly instructive
 				purpose (e.g. the three pieces for langeleik <a class="work_number_reference"
-					title="View work details" href="document.xq?doc=cnw0071.xml">CNW 71</a>). </p>
+					title="View work details" href="document.xq?n=71">CNW 71</a>). </p>
 			<p>In records of works of a more complex structure, such as operas divided into acts,
 				scenes and sections of scenes, the information constitutes a hierarchy of each
 				individual element that may be folded out by clicking on the &apos;Sections&apos;
@@ -466,7 +466,7 @@
 				by Nielsen’s contemporaries. </p>
 			<p>The source descriptions are minimal, providing only the most basic information for
 				identification. More detailed descriptions are available in the volumes of <a
-					href="http://www.kb.dk/en/nb/dcm/cnu/" target="_blank"
+					href="https://www.kb.dk/en/find-materials/collections/sheet-music-collection/music-editions-and-lists-works-royal-danish-library" target="_blank"
 					title="The Carl Nielsen Edition">CNU</a>. To
 				facilitate the consultation, CNW lists CNU&apos;s source designation (e.g. &apos;CNU
 				Source <b>A</b>&apos;). The appropriate CNU volumes are available via the mentioned
