--- a/cat-site/cnw/preface.html
+++ b/cat-site/cnw/preface.html
@@ -26,7 +26,7 @@
         therefore, a single song may have as many as four different FS numbers, 
         none of which can be used to identify the particular song. </p> 
       <p>The first complete survey of all Nielsen&apos;s compositions and their sources was not initiated,
-        however, until the foundation of the <a href="http://www.kb.dk/en/nb/dcm/cnu/" target="_blank"
+        however, until the foundation of the <a href="https://www.kb.dk/en/find-materials/collections/sheet-music-collection/music-editions-and-lists-works-royal-danish-library" target="_blank"
 						title="The Carl Nielsen Edition">The Carl Nielsen Edition</a> <a class="abbr" 
 														 href="javascript:void(0);">(CNU; completed 2009)<span class="expan"> 
             <i>Carl Nielsen Udgaven</i>. The Royal Library: Copenhagen 1998–2009</span></a>. In more than one sense, 
