--- a/cat-site/hartw/menu.html
+++ b/cat-site/hartw/menu.html
@@ -2,6 +2,6 @@
    <a href="preface.xq" class="preface">Foreword</a>
    <a href="acknowledgements.xq" class="acknowledgements">Acknowledgements</a>
    <a href="introduction.xq" class="introduction">Introduction</a>
-   <a href="navigation.xq" class="navigation">Catalogue</a>
+   <a href="index.xq" class="navigation">Catalogue</a>
    <a href="about.xq" class="about">About HartW</a>
 </div> 
