--- a/cat-site/hartw/preface.html
+++ b/cat-site/hartw/preface.html
@@ -26,7 +26,7 @@
         In Denmark, a catalogue of Carl Nielsen (1865–1931)’s works was published by The Royal Library in 2014 and 2016.</p>
       <p> </p>
       <p>The <em>HartW</em>, the catalogue’s official acronym, has been prepared employing the new database software developed in an international context by the 
-        <a href="http://www.kb.dk/da/nb/dcm/">Danish Centre for Music Editing</a> at The Royal Library for precisely such work catalogues.</p>
+        Danish Centre for Music Editing at <a href="https://www.kb.dk">The Royal Danish Library</a> for precisely such work catalogues.</p>
       <p> </p>
       <p>Publications of this kind cannot be prepared and published without generous support from many quarters. 
         The work started with a personal grant in 2010 from Augustinus Fonden to former senior researcher, Inger Sørensen, 
