--- a/cnw.html
+++ b/cnw.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <meta http-equiv="refresh" content="5;url=navigation.xq"/>
+        <meta http-equiv="refresh" content="5;url=index.xq"/>
         <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <link type="text/css" href="/editor/style/dcm.css" rel="stylesheet"/>
         <link type="text/css" href="/editor/style/cnw.css" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="/editor/style/public_list_style.css"/>
         <script type="text/javascript">
-            window.location.href = "cnw/navigation.xq";
+            window.location.href = "index.xq";
         </script>
         <title>Carl Nielsen Works Catalogue (CNW)</title>
     </head>
@@ -17,7 +17,7 @@
         <div id="all">
             <div id="header">
                 <div class="kb_logo">
-                    <a href="http://www.kb.dk" title="Det Kongelige Bibliotek">
+                    <a href="https://www.kb.dk" title="Det Kongelige Bibliotek">
                         <img id="KBLogo" title="Det Kongelige Bibliotek" alt="KB Logo" src="/editor/images/kb_white.png"/>
                         <img id="KBLogo_print" title="Det Kongelige Bibliotek" alt="KB Logo" src="/editor/images/kb.png"/>
                     </a>
@@ -28,20 +28,20 @@
             <div id="menu" class="noprint">
                 <a href="cnw/preface.xq" class="">Preface</a>
                 <a href="cnw/introduction.xq" class="">Introduction</a>
-                <a href="cnw/navigation.xq" class="selected">Catalogue</a>
+                <a href="cnw/index.xq" class="selected">Catalogue</a>
                 <a href="cnw/about.xq" class="">About CNW</a>
             </div>
             <div id="main">
                 <div class="content_box">
-                    <p>If you are not redirected automatically, follow this <a href='cnw/navigation.xq'>link to the CNW catalogue</a></p>
+                    <p>If you are not redirected automatically, follow this <a href='cnw/index.xq'>link to the CNW catalogue</a></p>
                     </div>
                 </div>
             <div id="footer">
-                <a href="http://www.kb.dk/dcm" title="DCM" style="text-decoration:none;">
+                <a href="https://www.kb.dk" title="DCM" style="text-decoration:none;">
                     <img style="border: 0px; vertical-align:middle;" alt="DCM Logo" src="/editor/images/dcm_logo_small_white.png" id="dcm_logo"/>
                     <img style="border: 0px; vertical-align:middle;" alt="DCM Logo" src="/editor/images/dcm_logo_small.png" id="dcm_logo_print"/>
                 </a>
-                2014 Danish Centre for Music Publication | The Royal Library, Copenhagen | <a name="www.kb.dk" id="www.kb.dk" href="http://www.kb.dk/dcm">www.kb.dk/dcm</a>
+                2014 Danish Centre for Music Publication | The Royal Library, Copenhagen | <a name="www.kb.dk" id="www.kb.dk" href="https://www.kb.dk">www.kb.dk</a>
             </div>
         </div>
     </body>
