--- a/cat-site/cnw/about.html
+++ b/cat-site/cnw/about.html
@@ -12,16 +12,15 @@
         </p>
         <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
             Royal Danish Library<br/>
-            P.O. Box 2149<br/>
-            DK-1016 Copenhagen K<br/>
+            Søren Kierkegaards Plads 1<br/>
+            1221 Copenhagen K<br/>
             Denmark<br/>
-            WWW: <a href="http://www.kb.dk/en/nb/dcm/">www.kb.dk/en/nb/dcm/</a></span></p> 
+            WWW: <a href="https://www.kb.dk">www.kb.dk</a></span></p> 
         <p><span class="label">&#160;</span><span>&#169; 2014-2018</span></p>
         <p><span class="label">Translation of song titles and first lines:</span><span><br/>Holger Scheibel</span></p>
         <p><span class="label">Technical development:</span><span>Sigfrid Lundberg, Axel Teich Geertinger</span></p>
         <p><span class="label">Assistant:</span><span>Katarina Smitt Engberg</span></p>
-        <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
-							    title="See MerMEId project page">MerMEId</a></span></p>
+        <p><span class="label">Created with:</span><span><a href="https://music-encoding.org/tools/mermeid" title="See MerMEId project page">MerMEId</a></span></p>
         <p><span class="label">Sponsor: </span><span>Carl Nielsen og Anne Marie Carl-Nielsens Legat</span></p>
         <p>&#160;</p>
       </div>
