--- a/cat-site/nwgw/menu.html
+++ b/cat-site/nwgw/menu.html
@@ -1,6 +1,6 @@
 <div id="menu" class="noprint">
    <a href="acknowledgements.xq" class="acknowledgements">Acknowledgements</a>
    <a href="introduction.xq" class="introduction">Introduction</a>
-   <a href="navigation.xq" class="navigation">Catalogue</a>
+   <a href="index.xq" class="navigation">Catalogue</a>
    <a href="about.xq" class="about">About NWGW</a>
 </div> 
