--- a/cat-site/schw/about.html
+++ b/cat-site/schw/about.html
@@ -14,15 +14,14 @@
           <span class="label">Incipits: </span><span>Peter Hauge, Birthe Skou and Axel Teich Geertinger</span>
         </p>
         <p><span class="label">Published by: </span><span>Danish Centre for Music Editing<br/>
-            Royal Danish Library<br/>
-            P.O. Box 2149<br/>
-            DK-1016 Copenhagen K<br/>
-            Denmark<br/>
-            WWW: <a href="http://www.kb.dk/en/nb/dcm/">www.kb.dk/en/nb/dcm/</a></span></p> 
+          Royal Danish Library<br/>
+          Søren Kierkegaards Plads 1<br/>
+          1221 Copenhagen K<br/>
+          Denmark<br/>
+          WWW: <a href="https://www.kb.dk">www.kb.dk</a></span></p> 
         <p><span class="label">&#160;</span><span>&#169; 2017</span></p>
         <p><span class="label">Technical development:</span><span>Axel Teich Geertinger, Sigfrid Lundberg</span></p>
-        <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
-							    title="See MerMEId project page">MerMEId</a></span></p>
+        <p><span class="label">Created with:</span><span><a href="https://music-encoding.org/tools/mermeid" title="See MerMEId project page">MerMEId</a></span></p>
         <p>&#160;</p>
       </div>
     </div>
