--- a/cat-site/schw/menu.html
+++ b/cat-site/schw/menu.html
@@ -1,6 +1,6 @@
 <div id="menu" class="noprint">
    <a href="preface.xq" class="preface">Preface</a>
    <a href="introduction.xq" class="introduction">Introduction</a>
-   <a href="navigation.xq" class="navigation">Catalogue</a>
+   <a href="index.xq" class="navigation">Catalogue</a>
    <a href="about.xq" class="about">About SchW</a>
 </div> 
